--- a/index.html
+++ b/index.html
@@ -5,23 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <style>
-      .message { font-size: 1.3em; font-weight: bold; }
+      .message { font-size: 1.3em; font-weight: bold }
+      .red { color: red ; border-style: solid; border-color: red }
+      .green { color: green ; border-style: solid; border-color: green }
+
     </style>
   </head>
-<body>
-   <div class="container">
-     <h1>Lunch Checker</h1>
+  <script src="angular.min.js"></script>
+  <script src=app.js></script>
 
+<body ng-app="LunchCheck">
+   <div class="container" ng-controller='LunchCheckController'>
+     <h1>Lunch Checker</h1>
+     <h4>(Bonus feature: Empty input not counted towards total number of lunch items!)</h2>
          <div class="form-group">
              <input id="lunch-menu" type="text"
              placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control">
+             class="form-control"
+             ng-model="lunchlist">
          </div>
          <div class="form-group">
-             <button class="btn btn-default">Check If Too Much</button>
+             <button class="btn btn-default" ng-click="CheckIfTooMuch()">Check If Too Much</button>
          </div>
-         <div class="form-group message">
-           <!-- Your message can go here. -->
+         <div class="form-group message {{ colorstyle }}">
+           {{ checkIfTooMuchResult }}
          </div>
    </div>
 
